Implementado o gerenciamento de tickets
